[IfChainToSwitch] enhance domination logic to respect developing changes in JEP 530
PiperOrigin-RevId: 891722438